# customized_edo

./: CMakeLists.txt  package.xml
config/: edo.srdf  edo_real_config.yaml  edo_simulated_config.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  edo_moveit_controller_manager.launch.xml  edo_moveit_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_servo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real_demo_gazebo.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  servo.launch  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
