<package>

  <name>customized_edo</name>
  <version>0.4.0</version>
  <description>
     Updated version to integrate the robotic arm e.DO with MoveIT.
  </description>
  <author email="lucamarchionna97@gmail.com">Luca Marchionna</author>
  <maintainer email="profanter@fortiss.org">Luca Marchionna</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>edo_description</build_depend>
  <run_depend>edo_description</run_depend>
  <run_depend>edo_control</run_depend>

</package>
